// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`map Renders \`map\` widget settings with custom props 1`] = `
<widget-settings-stub>
  <field-title-stub
    value="Map widget"
  />
  <hr
    class="v-divider theme--light"
  />
  <field-periodic-refresh-stub
    value="[object Object]"
  />
  <hr
    class="v-divider theme--light"
  />
  <field-map-stub
    value="map_id"
  />
  <hr
    class="v-divider theme--light"
  />
  <widget-settings-group-stub
    title="Entity display settings"
  >
    <field-color-indicator-stub
      value="state"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-switcher-stub
      title="Entities under PBh type inactive, Pause, Maintenance display"
      value="true"
    />
  </widget-settings-group-stub>
  <hr
    class="v-divider theme--light"
  />
  <widget-settings-group-stub
    title="Advanced settings"
  >
    <!---->
    <field-text-editor-stub
      title="Entity info popup"
      value=<div>TEMPLATE</div>
      variables="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-columns-stub
      alarminfos=""
      columns="[object Object]"
      entityinfos=""
      label="Alarm list columns"
      templates=""
      type="alarm"
      withhtml="true"
      withtemplate="true"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-columns-stub
      alarminfos=""
      columns="[object Object]"
      entityinfos=""
      label="Context explorer columns"
      templates=""
      type="entity"
      withcolorindicator="true"
      withhtml="true"
    />
  </widget-settings-group-stub>
  <hr
    class="v-divider theme--light"
  />
</widget-settings-stub>
`;

exports[`map Renders \`map\` widget settings with default props 1`] = `
<widget-settings-stub>
  <field-title-stub
    value=""
  />
  <hr
    class="v-divider theme--light"
  />
  <field-periodic-refresh-stub
    value="[object Object]"
  />
  <hr
    class="v-divider theme--light"
  />
  <field-map-stub
    value=""
  />
  <hr
    class="v-divider theme--light"
  />
  <widget-settings-group-stub
    title="Entity display settings"
  >
    <field-color-indicator-stub
      value="state"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-switcher-stub
      title="Entities under PBh type inactive, Pause, Maintenance display"
      value="true"
    />
  </widget-settings-group-stub>
  <hr
    class="v-divider theme--light"
  />
  <widget-settings-group-stub
    title="Advanced settings"
  >
    <!---->
    <field-text-editor-stub
      title="Entity info popup"
      value=<ul>
  <li><strong>Libellé</strong> : {{entity.name}}</li>
</ul>
      variables="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-columns-stub
      alarminfos=""
      columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      entityinfos=""
      label="Alarm list columns"
      templates=""
      type="alarm"
      withhtml="true"
      withtemplate="true"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-columns-stub
      alarminfos=""
      columns="[object Object],[object Object]"
      entityinfos=""
      label="Context explorer columns"
      templates=""
      type="entity"
      withcolorindicator="true"
      withhtml="true"
    />
  </widget-settings-group-stub>
  <hr
    class="v-divider theme--light"
  />
</widget-settings-stub>
`;
